cluster-1/mcs-headless-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-headless
  namespace: mcs-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-headless
  template:
    metadata:
      labels:
        app: web-headless
        environment: production
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-headless
  namespace: mcs-test
spec:
  clusterIP: None
  ports:
    - port: 80
  selector:
    app: web-headless
